content: add Plausible add-on guide

--- a/src/content/docs/installation.mdx
+++ b/src/content/docs/installation.mdx
@@ -3,12 +3,12 @@ title: Install Hyas with the Automatic CLI
 description: A reference page in my new Starlight docs site.
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import List from '../../../components/List.astro';
+import List from '../../components/List.astro';
 
 Ready to install Hyas? Follow this guide to using the `create hyas` CLI to get started.
 
 :::note[Prefer to install Hyas manually?]
-Read our [step-by-step manual installation guide](/install/manual/) instead.
+Read our [step-by-step manual installation guide](/manual-setup/) instead.
 :::
 
 ## Prerequisites
