--- a/src/content/docs/manual-setup.mdx
+++ b/src/content/docs/manual-setup.mdx
@@ -3,13 +3,13 @@ title: Install Hyas manually
 description: A reference page in my new Starlight docs site.
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import List from '../../../components/List.astro';
-import FileTree from '../../../components/file-tree.astro';
+import List from '../../components/List.astro';
+import FileTree from '../../components/file-tree.astro';
 
-This guide will walk you through the steps to manually install and configure a new Hyas project if you prefer not to use the [automatic CLI tool](/install/auto/).
+This guide will walk you through the steps to manually install and configure a new Hyas project if you prefer not to use the [automatic CLI tool](/installation/).
 
 :::note[Prefer a quicker way to get started?]
-Try the [create hyas CLI wizard](/install/auto/) instead.
+Try the [create hyas CLI wizard](/installation/) instead.
 :::
 
 ## Prerequisites
