--- a/src/content/docs/guides/integrations/index.mdx
+++ b/src/content/docs/guides/integrations/index.mdx
@@ -4,7 +4,7 @@ description: A guide in my new Starlight docs site.
 ---
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
-Hyas integrations add new functionality and behaviors for your project with only a few lines of code. You can write a custom integration yourself, use an official integration, or use integrations built by the community.
+**Hyas integrations** add new functionality and behaviors for your project with only a few lines of code. You can write a custom integration yourself, use an official integration, or use integrations built by the community.
 
 Integrations can…
 
