--- a/src/content/docs/manual-setup.mdx
+++ b/src/content/docs/manual-setup.mdx
@@ -52,9 +52,10 @@ yarn init --yes
 
 ### 2. Install Hyas
 
-First, replace any placeholder “scripts” section of your package.json with the following:
+First, replace any placeholder “scripts” section of your `package.json` with the following:
 
 ```json
+// package.json
   "scripts": {
     "dev": "exec-bin node_modules/.bin/hugo/hugo server --bind=0.0.0.0 --disableFastRender --baseURL=http://localhost --noHTTPCache",
     "dev:drafts": "exec-bin node_modules/.bin/hugo/hugo server --bind=0.0.0.0 --disableFastRender --baseURL=http://localhost --noHTTPCache --buildDrafts",
@@ -80,6 +81,7 @@ You'll use these scripts later in the guide to start Hyas and run its different 
 Then, add an `.npmrc` file to your project root with the following:
 
 ```ini
+// .npmrc
 enable-pre-post-scripts = true
 auto-install-peers = true
 node-linker = hoisted
@@ -183,6 +185,7 @@ mkdir assets/scss && cd assets/scss
 Add an `app.scss` file with the following:
 
 ```scss
+// app.scss
 /** Import modern-css-reset */
 @import "modern-css-reset/src/reset";
 
@@ -213,6 +216,7 @@ mkdir config/_default && cd config/_default
 Add a `hugo.toml` file with the following:
 
 ```toml
+// hugo.toml
 title = "Hyas"
 baseurl = "/"
 canonifyURLs = false
@@ -247,6 +251,7 @@ copyRight = "Copyright (c) 2023 Hyas"
 Add a `module.toml` file with the following:
 
 ```toml
+//module.toml
 [[mounts]]
   source = "node_modules/@hyas/core/assets"
   target = "assets"
@@ -277,6 +282,7 @@ Add a `module.toml` file with the following:
 Add a `params.toml` file with the following:
 
 ```toml
+// params.toml
 # Meta Data for SEO
 
 ## Homepage
@@ -298,6 +304,7 @@ cd ..
 Add a `babel.config.js` file with the following:
 
 ```js
+// babel.config.js
 module.exports = {
   presets: [
     [
@@ -322,6 +329,7 @@ module.exports = {
 Add a `postcss.config.js` file with the following:
 
 ```js
+// postcss.config.js
 const autoprefixer = require('autoprefixer');
 const purgecss = require('@fullhuman/postcss-purgecss');
 const whitelister = require('purgecss-whitelister');
@@ -370,6 +378,7 @@ cd ..
 Add a `.eslintrc.json` file with the following:
 
 ```js
+// .eslintrc.json
 {
   "env": {
     "browser": true,
@@ -408,6 +417,7 @@ Add a `.eslintrc.json` file with the following:
 Add a `.stylelintrc.json` file with the following:
 
 ```js
+// .stylelintrc.json
 {
   "extends": "stylelint-config-standard-scss",
   "rules": {
