content: update installation

--- a/src/content/docs/installation.mdx
+++ b/src/content/docs/installation.mdx
@@ -121,13 +121,13 @@ npm create hyas@latest -- --template doks
   <TabItem label="pnpm">
 ```bash
 # Syntax: pnpm create hyas@latest --template <example-name>
-pnpm create hyas@latest -- --template doks
+pnpm create hyas@latest --template doks
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
 # Syntax: yarn create hyas --template <example-name>
-yarn create hyas@latest -- --template doks
+yarn create hyas@latest --template doks
 ```
   </TabItem>
 </Tabs>
@@ -140,19 +140,19 @@ Create a new project based on a GitHub repository's main branch
   <TabItem label="npm">
 ```bash
 # Syntax: npx degit <user/repo> [project-directory]
-npx degit <user/repo>
+npx degit h-enk/simply-cyan my-hyas-project
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
 # Syntax: pnpm dlx degit <user/repo> [project-directory]
-pnpm dlx degit <user/repo>
+pnpm dlx degit h-enk/simply-cyan my-hyas-project
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
 # Syntax: yarn dlx degit <user/repo> [project-directory]
-yarn dlx degit <user/repo>
+yarn dlx degit h-enk/simply-cyan my-hyas-project
 ```
   </TabItem>
 </Tabs>
