ux: restructure sidebar navigation

--- a/src/content/docs/basics/project-structure.mdx
+++ b/src/content/docs/basics/project-structure.mdx
@@ -1,6 +1,8 @@
 ---
 title: Project Structure
 description: A reference page in my new Starlight docs site.
+sidebar:
+  order: 1
 ---
 import FileTree from '../../../components/file-tree.astro';
 
