content: add Cloudflare deployment guide

--- a/src/content/docs/guides/deploy/gitlab.mdx
+++ b/src/content/docs/guides/deploy/gitlab.mdx
@@ -3,7 +3,7 @@ title: Deploy your Hyas Site to GitLab Pages
 description: How to deploy your Hyas site to the web using GitLab Pages.
 type: deploy
 stub: false
-service: Gitlab Pages
+service: GitLab Pages
 ---
 
 You can use [GitLab Pages](https://pages.gitlab.io/) to host a Hyas site for your [GitLab](https://about.gitlab.com/) projects, groups, or user account.
