--- a/src/content/docs/guides/deploy/github.mdx
+++ b/src/content/docs/guides/deploy/github.mdx
@@ -3,7 +3,7 @@ title: Deploy your Hyas Site to GitHub Pages
 description: How to deploy your Hyas site to the web using GitHub Pages.
 type: deploy
 stub: false
-service: Github Pages
+service: GitHub Pages
 ---
 
 You can use [GitHub Pages](https://pages.github.com/) to host a Hyas website directly from a repository on [GitHub.com](https://github.com/).
