content: update CMS guides

--- a/src/content/docs/guides/cms/decap-cms.mdx
+++ b/src/content/docs/guides/cms/decap-cms.mdx
@@ -5,5 +5,13 @@ type: cms
 stub: true
 service: Decap CMS
 ---
+import List from '~/components/List.astro';
 
 [Decap CMS](https://www.decapcms.org/) (formerly Netlify CMS) is an open-source, Git-based content management system.
+
+## Official Resources 
+
+<List emoji="books">
+- [How to integrate Decap CMS with Hugo](https://decapcms.org/docs/hugo/).
+- [Hugo template with Decap CMS](https://github.com/decaporg/one-click-hugo-cms)
+</List>
