--- a/src/content/docs/guides/cms.mdx
+++ b/src/content/docs/guides/cms.mdx
@@ -1,11 +1,35 @@
 ---
 title: Use a CMS with Hyas
-description: A guide in my new Starlight docs site.
+description: How to use a CMS to add content to Hyas
 ---
 import CMSGuidesNav from '~/components/CMSGuidesNav.astro';
+import List from '~/components/List.astro';
 
 **Ready to connect a Headless CMS to your Hyas project?** Follow one of our guides to integrate a CMS.
 
 ## CMS Guides
 
 <CMSGuidesNav />
+
+## Why use a CMS?
+
+A Content Management System lets you write content and manage assets outside of your Hyas project.
+
+This unlocks new features for working with content. Most CMSes give you a visual content editor, the ability to specify standard types of content, and a way to collaborate with others. 
+
+A CMS can be useful for content that follows a particular structure, often giving you a dashboard-like experience and WYSIWYG editing tools. You might use a CMS to write blog posts using a CMS's rich text editor instead of Markdown files. Or you might use a CMS to maintain product listings for an eCommerce shop, making certain fields required to avoid incomplete listings. 
+
+Your Hyas project can then fetch your content from your CMS and display it, wherever and however you want on your site.
+
+## Which CMSes work well with Hyas?
+
+Because Hyas takes care of the *presentation* of your content, you'll want to choose a *headless* CMS, like those in the list above. This means that the CMS helps you write your content, but doesn't generate a site that displays it. Instead, you fetch the content data and use in your Hyas project. 
+
+<List emoji="books">
+- [Headless CMS](https://jamstack.org/headless-cms/)
+- [Front-end interfaces](https://gohugo.io/tools/front-ends/)
+</List>
+
+## Can I use Hyas without a CMS?
+
+Yes! Hyas provides built-in ways to [author content](/guides/content/), including support for Markdown pages.
