--- a/src/content/docs/guides/cms/tina-cms.mdx
+++ b/src/content/docs/guides/cms/tina-cms.mdx
@@ -1,13 +1,125 @@
 ---
 title: Tina CMS & Hyas
-description: A guide in my new Starlight docs site.
+description: Add content to your Hyas project using Tina as a CMS
 type: cms
 stub: false
 service: Tina CMS
 ---
+import { Tabs, TabItem } from '@astrojs/starlight/components';
+import List from '~/components/List.astro';
 
 [Tina CMS](https://tina.io/) is a Git-backed headless content management system.
 
 ## Integrating with Hyas
 
 To get started, you'll need an existing Hyas project.
+
+1. Run the following command to install Tina into your Hyas project.
+
+    <Tabs>
+      <TabItem label="npm">
+    ```bash
+    npx @tinacms/cli@latest init
+    ```
+      </TabItem>
+      <TabItem label="pnpm">
+    ```bash
+    pnpm dlx @tinacms/cli@latest init
+    ```
+      </TabItem>
+      <TabItem label="Yarn">
+    ```bash
+    yarn dlx @tinacms/cli@latest init
+    ```
+      </TabItem>
+    </Tabs>
+
+    - When prompted for a Cloud ID, press <kbd>Enter</kbd> to skip. You'll generate one later if you want to use Tina Cloud.
+    - When prompted "What framework are you using", choose **Other**.
+    - When asked where public assets are stored, press <kbd>Enter</kbd>.
+
+    After this has finished, you should now have a `.tina` folder in the root of your project and a generated `hello-world.md` file at `content/posts`.
+
+2. Change  the `dev` script in `package.json`:
+
+    ```json del={4} ins={5}
+    // package.json
+    {
+        "scripts": {
+            "dev": "hyas dev",
+            "dev": "tinacms dev -c \"hyas dev\""
+        }
+    }
+    ```
+
+3. TinaCMS is now set up in local mode. Test this by running the `dev` script, then navigating to `/admin/index.html#/collections/post`.
+
+    Editing the “Hello, World!” post will update the `content/posts/hello-world.md` file in your project directory.
+
+4. Set up your Tina collections by editing the `schema.collections` property in `.tina/config.ts`.
+
+    For example, you can add a required "date posted" frontmatter property to our posts:
+
+    ```js title=".tina/config.ts" ins={35-40}
+    import { defineConfig } from "tinacms";
+
+    // Your hosting provider likely exposes this as an environment variable
+    const branch = process.env.HEAD || process.env.VERCEL_GIT_COMMIT_REF || "main";
+
+    export default defineConfig({
+      branch,
+      clientId: null, // Get this from tina.io
+      token: null, // Get this from tina.io
+      build: {
+        outputFolder: "admin",
+        publicFolder: "public",
+      },
+      media: {
+        tina: {
+          mediaRoot: "images",
+          publicFolder: "public",
+        },
+      },
+      schema: {
+        collections: [
+          {
+            name: "posts",
+            label: "Posts",
+            path: "src/content/posts",
+            format: 'mdx',
+            fields: [
+              {
+                type: "string",
+                name: "title",
+                label: "Title",
+                isTitle: true,
+                required: true,
+              },
+              {
+                type: "datetime",
+                name: "posted",
+                label: "Date Posted",
+                required: true,
+              },
+              {
+                type: "rich-text",
+                name: "body",
+                label: "Body",
+                isBody: true,
+              },
+            ],
+          },
+        ],
+      },
+    });
+    ```
+
+    Learn more about Tina collections [in the Tina docs](https://tina.io/docs/reference/collections/).
+
+5. In production, TinaCMS can commit changes directly to your GitHub repository. To set up TinaCMS for production, you can choose to use [Tina Cloud](https://tina.io/docs/tina-cloud/) or self-host the [Tina Data Layer](https://tina.io/docs/self-hosted/overview/). You can [read more about registering for Tina Cloud](https://app.tina.io/register) in the Tina Docs.
+
+## Official Resources
+
+<List emoji="books">
+- [Hugo + TinaCMS Setup Guide](https://tina.io/docs/frameworks/hugo/).
+</List>
