content: update Analytics guides

--- a/src/content/docs/guides/analytics.mdx
+++ b/src/content/docs/guides/analytics.mdx
@@ -4,8 +4,12 @@ description: A guide in my new Starlight docs site.
 ---
 import AnalyticsGuidesNav from '~/components/AnalyticsGuidesNav.astro';
 
-**Ready to add Analytics to your Hyas project?** Follow one of our guides to add analytics.
+**Ready to add Analytics to your Hyas project?** Follow one of our guides to different analytics services or scroll down for general guidance about adding analytics to a Hyas site.
 
 ## Analytics Guides
 
 <AnalyticsGuidesNav />
+
+## General Setup
+
+Add a tracking script to `layouts/partials/head/script-header.html`.
