--- a/src/content/docs/guides/analytics/google-analytics.mdx
+++ b/src/content/docs/guides/analytics/google-analytics.mdx
@@ -1,7 +1,18 @@
 ---
-title: "Google Analytics"
-description: Google Analytics guide for Hyas
+title: "Add Google Analytics to your Hyas Site"
+description: How to add ananlytics to your Hyas site using Google Analytics.
 type: analytics
 stub: false
 service: Google Analytics
 ---
+import List from '~/components/List.astro';
+
+[Google Analytics](https://usefathom.com/) is an analytics service that enables you to measure traffic and engagement across your websites and apps.
+
+## Official Resources
+
+<List emoji="books">
+- [Set up Analytics for a website and/or app](https://support.google.com/analytics/answer/9304153?sjid=14124496534625981645-EU)
+- [The Google tag and Tag Manager](https://developers.google.com/analytics/devguides/collection/ga4/tag-options)
+- [Introduction to Google Analytics 4](https://developers.google.com/analytics/devguides/collection/ga4)
+</List>
