--- a/src/content/docs/guides/analytics/fathom-analytics.mdx
+++ b/src/content/docs/guides/analytics/fathom-analytics.mdx
@@ -1,7 +1,29 @@
 ---
-title: "Fathom Analytics"
-description: Fathom Analytics guide for Hyas
+title: "Add Fathom Analytics to your Hyas Site"
+description: How to add ananlytics to your Hyas site using Fathom Analytics.
 type: analytics
 stub: false
 service: Fathom
 ---
+import List from '~/components/List.astro';
+
+[Fathom Analytics](https://usefathom.com/) is a Google Analytics alternative that doesn't compromise visitor privacy for data.
+
+## Set up Fathom
+
+To follow this guide, you'll need an existing [Hyas](https://gethyas.com/) site and a [Fathom](https://usefathom.com/docs/start/create) project.
+
+### Add script
+
+Add to `layouts/partials/head/script-header.html`:
+
+```html
+<script src="https://cdn.usefathom.com/script.js" data-site="SITE_ID" defer></script>
+```
+
+## Official Resources
+
+<List emoji="books">
+- [Advanced embed script settings](https://usefathom.com/docs/script/script-advanced)
+- [If Fathom isn't working on your site](https://usefathom.com/docs/troubleshooting/not-working)
+</List>
