--- a/src/content/docs/guides/integrations/images.mdx
+++ b/src/content/docs/guides/integrations/images.mdx
@@ -1,44 +1,17 @@
 ---
 title: "@hyas/images"
-description: Images integration for Hyas
+description: Official Images integration for Hyas
 type: integration
 stub: false
 service: "@hyas/images"
 ---
-import Button from '~/components/Button.astro'
-import { Tabs, TabItem } from '@astrojs/starlight/components';
+import List from '~/components/List.astro';
 
-Images is the official images integration for the [Hyas](https://gethyas.com/) framework. This guide will help you get started with Images. See the [manual setup instructions](https://images.gethyas.com/docs/start-here/manual-setup/) to add Images to an existing Hyas project.
+[Images](https://images.gethyas.com/) is the official Images integration for the Hyas framework.
 
-<div style="display: flex; flex-wrap: wrap; gap: 0.5rem;">
-  <Button href="https://images.gethyas.com/">View full documentation</Button>
-</div>
+## Official Resources
 
-## Quick start
-
-To follow this guide, you'll need an existing Hyas project with Images installed.
-
-### Check if Images is installed
-
-Check if Images is installed by running the following command in your project's root directory:
-
-<Tabs>
-  <TabItem label="npm">
-```bash
-npm list @hyas/images
-```
-  </TabItem>
-  <TabItem label="pnpm">
-```bash
-pnpm list @hyas/images --depth 1
-```
-  </TabItem>
-  <TabItem label="Yarn">
-```bash
-yarn list @hyas/images --depth=1
-```
-  </TabItem>
-</Tabs>
-
-This will print the version of the package installed. If nothing is printed, you'll first need to add Images — proceed with the [manual setup instructions](https://images.gethyas.com/docs/start-here/manual-setup/).
-
+<List emoji="books">
+- [Getting Started](https://images.gethyas.com/docs/start-here/getting-started/)
+- [GitHub repository](https://github.com/gethyas/images)
+</List>
