--- a/src/content/docs/guides/integrations/inline-svg.mdx
+++ b/src/content/docs/guides/integrations/inline-svg.mdx
@@ -1,11 +1,17 @@
 ---
 title: "@hyas/inline-svg"
-description: Inline SVG integration for Hyas
+description: Official Inline SVG integration for Hyas
 type: integration
 stub: false
 service: "@hyas/inline-svg"
 ---
+import List from '~/components/List.astro';
 
-Inline SVG integration for Hyas.
+[Inline SVG](https://svg.gethyas.com/) is the official Inline SVG integration for the Hyas framework.
 
-[..]
+## Official Resources
+
+<List emoji="books">
+- [Getting Started](https://svg.gethyas.com/docs/start-here/getting-started/)
+- [GitHub repository](https://github.com/gethyas/inline-svg)
+</List>
