ux: update integration guides+

--- a/src/content/docs/guides/integrations/bolt-core.mdx
+++ b/src/content/docs/guides/integrations/bolt-core.mdx
@@ -4,6 +4,7 @@ description: Core integration for the Bolt theme
 type: integration
 stub: false
 service: "@hyas/bolt-core"
+category: theme
 ---
 
 Core integration for the Bolt theme.
