--- a/src/content/docs/guides/integrations/bootstrap.mdx
+++ b/src/content/docs/guides/integrations/bootstrap.mdx
@@ -5,6 +5,7 @@ editUrl: https://github.com/gethyas/bootstrap/blob/main/README.md
 type: integration
 stub: false
 service: "@hyas/bootstrap"
+category: renderer
 ---
 import { LinkCard } from '@astrojs/starlight/components';
 
