--- a/src/content/docs/guides/integrations/doks-core.mdx
+++ b/src/content/docs/guides/integrations/doks-core.mdx
@@ -4,6 +4,7 @@ description: Core integration for the Doks theme
 type: integration
 stub: false
 service: "@hyas/doks-core"
+category: theme
 ---
 
 Core integration for the Doks theme.
