--- a/src/content/docs/guides/integrations/images.mdx
+++ b/src/content/docs/guides/integrations/images.mdx
@@ -4,6 +4,7 @@ description: Official Images integration for Hyas
 type: integration
 stub: false
 service: "@hyas/images"
+category: other
 ---
 import List from '~/components/List.astro';
 
