--- a/src/content/docs/guides/integrations/inline-svg.mdx
+++ b/src/content/docs/guides/integrations/inline-svg.mdx
@@ -4,6 +4,7 @@ description: Official Inline SVG integration for Hyas
 type: integration
 stub: false
 service: "@hyas/inline-svg"
+category: other
 ---
 import List from '~/components/List.astro';
 
