--- a/src/content/docs/guides/integrations/seo.mdx
+++ b/src/content/docs/guides/integrations/seo.mdx
@@ -4,6 +4,7 @@ description: Official SEO integration for Hyas
 type: integration
 stub: false
 service: "@hyas/seo"
+category: other
 ---
 import List from '~/components/List.astro';
 
