--- a/src/content/docs/guides/integrations/tailwind.mdx
+++ b/src/content/docs/guides/integrations/tailwind.mdx
@@ -4,6 +4,7 @@ description: Tailwind CSS integration for Hyas
 type: integration
 stub: false
 service: "@hyas/tailwindcss"
+category: renderer
 ---
 
 Tailwind CSS integration for Hyas.
