--- a/src/content/docs/guides/integrations.mdx
+++ b/src/content/docs/guides/integrations.mdx
@@ -15,6 +15,8 @@ Integrations can…
 
 ## Official Integrations
 
+The following integrations are maintained by Hyas.
+
 <IntegrationsNav />
 
 ## Setting up an Integration
