content: update Installation and Why Hyas guides

--- a/src/content/docs/concepts/why-hyas.mdx
+++ b/src/content/docs/concepts/why-hyas.mdx
@@ -3,11 +3,23 @@ title: Why Hyas?
 description: A guide in my new Starlight docs site.
 ---
 
-Hyas is a **Node.js web framework** for building **fast, security-focused** websites.
+**Hyas** is a web framework designed for **speed, security, and SEO** — all powered by **Hugo and npm**. If you need a website that loads fast, is more secure, and has great SEO, then Hyas is for you.
 
-Why choose Hyas over another web framework? Here are five core design principles to help explain why we built Hyas, the problems that it exists to solve, and why Hyas may be the best choice for your project or team.
+## Features
 
-## Hyas is...
+**Hyas is an all-in-one web framework**. It includes everything you need to create a website, built-in. There is also a growing number of different integrations available to customize a project to your exact use case and needs.
+
+Some highlights include:
+
+- [Dependencies](/concepts/dependencies/): Explicitly declare and isolate your dependencies — including Hugo.
+- [Site Generator](/concepts/site-generator/): Install Hugo locally and mount your dependencies' directories and files.
+- [Customizable](/guides/integrations/): Tailwind, Images, and a growing number of integrations to choose from.
+
+## Design Principles
+
+Here are five core design principles to help explain why we built Hyas, the problems that it exists to solve, and why Hyas may be the best choice for your project or team.
+
+Hyas is...
 
 - [Fast by default](#fast-by-default): It should be impossible to build a slow website with Hyas.
 - [Security focused](#security-focused): Your website should keep up with the latest in web security standards.
