content: update Why Hyas guide

--- a/src/content/docs/concepts/why-hyas.mdx
+++ b/src/content/docs/concepts/why-hyas.mdx
@@ -12,7 +12,7 @@ description: A guide in my new Starlight docs site.
 Some highlights include:
 
 - [Dependencies](/concepts/dependencies/): Explicitly declare and isolate your dependencies — including Hugo.
-- [Site Generator](/concepts/site-generator/): Install Hugo locally and mount your dependencies' directories and files.
+- [Site Generator](/concepts/site-generator/): Install Hugo locally and use Hugo's module mounts.
 - [Customizable](/guides/integrations/): Tailwind, Images, and a growing number of integrations to choose from.
 
 ## Design Principles
