content: update Getting Started and Installation guides

--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -6,7 +6,7 @@ import Button from '~/components/Button.astro'
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
-Hyas is a web framework designed for speed, security, and SEO — all powered by Hugo and npm. This guide will help you get started with a new project.
+**Hyas** is a web framework designed for **speed, security, and SEO** — all powered by **Hugo and npm**. This guide will help you get started with your new Hyas project.
 
 ## Quick Start
 
@@ -52,7 +52,7 @@ Visit [new.gethyas.com](https://new.gethyas.com/) and choose from a variety of t
     href="/concepts/why-hyas/" />
   <LinkCard
     title="Project Structure"
-    description="How a Hyas project is organized."
+    description="How your Hyas project is organized."
     href="/basics/project-structure/" />
   <LinkCard
     title="Configuration"
