--- a/src/content/docs/install/auto.mdx
+++ b/src/content/docs/install/auto.mdx
@@ -19,7 +19,7 @@ Read our [step-by-step manual installation guide](/install/manual/) instead.
 
 ## Installation
 
-`create-hyas` is the fastest way to start a new Hyas project from scratch. It will walk you through every step of setting up your new Hyas project. It allows you to choose from a few different official starter templates.
+`create-hyas` is the fastest way to start a new Hyas project from scratch. It will walk you through every step of setting up your new Hyas project. It allows you to choose from a few different official starter templates. Next to that, you can also [use any existing project on GitHub with the `degit` command](http://localhost:4321/install/auto/#community).
 
 :::tip[Online previews]
 Prefer to try Hyas in your browser? Visit [new.gethyas.com](https://new.gethyas.com/) to browse our starter templates and spin up a new Hyas project without ever leaving your browser.
